--- a/TasksLibrary/Tests/Tests.csproj
+++ b/TasksLibrary/Tests/Tests.csproj
@@ -64,7 +64,7 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
-    <Compile Include="Test.cs" />
+    <Compile Include="BubbleSortTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
