--- a/TasksLibrary/TasksLibrary/TasksLibrary.csproj
+++ b/TasksLibrary/TasksLibrary/TasksLibrary.csproj
@@ -40,10 +40,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Evaluator.cs" />
-    <Compile Include="ISortable.cs" />
-    <Compile Include="Sorter.cs" />
+    <Compile Include="Task1\Evaluator.cs" />
+    <Compile Include="Task1\ISortable.cs" />
+    <Compile Include="Task1\Sorter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Task2\Shape.cs" />
     <Compile Include="TaskWorker.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
