--- a/TasksLibrary/Tests/Tests.csproj
+++ b/TasksLibrary/Tests/Tests.csproj
@@ -66,6 +66,7 @@
   <ItemGroup>
     <Compile Include="BubbleSortTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ShapeTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TasksLibrary\TasksLibrary.csproj">
