--- a/TasksLibrary/Tests/Tests.csproj
+++ b/TasksLibrary/Tests/Tests.csproj
@@ -65,6 +65,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="BubbleSortTests.cs" />
+    <Compile Include="PolynomialTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShapeTests.cs" />
   </ItemGroup>
